corrected spacing issues

--- a/style1.css
+++ b/style1.css
@@ -167,7 +167,7 @@ img {
     font-weight: bolder;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px){
     .image-container .after .grp_button1 {
         bottom: 20%;
         left: 5%;
@@ -182,7 +182,22 @@ img {
         top: 20%;
     }
 }
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1920px) {
+    .image-container .after .grp_button1 {
+        bottom: 20%;
+        left: 25%;
+        width: 400px;
+    }
+    .image-container .after .grp_button2 {
+        bottom: 20%;
+        left: 55%;
+        width: 400px;
+    }
+    .image-container .after .content {
+        top: 25%;
+    }
+}
+@media screen and (min-width: 1024px) {
     .image-container .after .grp_button1 {
         bottom: 20%;
         left: 5%;
